examples/mood/tests/fixtures/construct_struct_missing_fields.mood
struct Foo {
  a: i32,
  b: i32,
  c: i32,
}

pub fn test(): i32 {
    Foo { a: 1_i32 };
    0_i32
}